# scavenger

./: .env.example  Makefile  README.md  config.py  main.py  pyproject.toml  scavenger.py
connectors/google/: __init__.py  google_storage.py
tools/: log_agent.py
