[project]
name = "autogen"
version = "0.1.0"
description = "POC for agentic log retrieval"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen-agentchat>=0.7.5",
    "autogen-ext>=0.7.5",
    "dotenv>=0.9.9",
    "openai>=2.6.1",
    "tiktoken>=0.12.0",
    "google-cloud-storage>=2.10.0",
]
